Fixed text align when responinsive for membership divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,16 +186,6 @@ hr {
     box-sizing: content-box;
     }
 
-    /*.prices {
-        display: block;
-        color: #fafafa;
-        background-color: #0f0707;
-        width: 70%;
-        padding: 20px;
-        text-align: center;
-        list-style-position: inside;
-        margin: 0 auto;
-    }*/
 
     #student-price {
         display: block;
@@ -203,7 +193,7 @@ hr {
         background-color: #0f0707;
         width: 70%;
         padding: 20px;
-        text-align: center;
+        text-align: start;
         list-style-position: inside;
         margin: 5px auto;
     }
@@ -214,7 +204,7 @@ hr {
         background-color: #0f0707;
         width: 70%;
         padding: 20px;
-        text-align: center;
+        text-align: start;
         list-style-position: inside;
         margin: 5px auto;
     }
@@ -225,7 +215,7 @@ hr {
         background-color: #0f0707;
         width: 70%;
         padding: 20px;
-        text-align: center;
+        text-align: start;
         list-style-position: inside;
         margin: 5px auto;
     }
@@ -274,7 +264,7 @@ hr {
         background-color: #0f0707;
         width: 70%;
         padding: 20px;
-        text-align: center;
+        text-align: start;
         list-style-position: inside;
         margin: 5px auto;
     }
@@ -285,7 +275,7 @@ hr {
         background-color: #0f0707;
         width: 70%;
         padding: 20px;
-        text-align: center;
+        text-align: start;
         list-style-position: inside;
         margin: 5px auto;
     }
@@ -296,7 +286,7 @@ hr {
         background-color: #0f0707;
         width: 70%;
         padding: 20px;
-        text-align: center;
+        text-align: start;
         list-style-position: inside;
         margin: 5px auto;
     }
